--- a/index.html
+++ b/index.html
@@ -1,1 +1,106 @@
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>갑서 - 갑자기 부자가 된 당신을 위한 서비스</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Pretendard', sans-serif;
+      background: #fafafa;
+      color: #222;
+    }
+    header {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: #f5c400; color:#000;
+      color: #fff;
+      overflow: hidden;
+      position: relative;
+    }
 
+    /* 모션 캘리그래피 효과 */
+    .banner-text {
+      font-size: 2.4rem;
+      text-align: center;
+      line-height: 1.5;
+      opacity: 0;
+      animation: fadeInUp 2s ease-out forwards;
+      white-space: pre-line;
+    }
+
+    @keyframes fadeInUp {
+      0% { opacity: 0; transform: translateY(40px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+
+    .section {
+      padding: 80px 20px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 40px;
+    }
+
+    .card {
+      background: white;
+      padding: 20px;
+      border-radius: 16px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.07);
+    }
+
+    footer {
+      padding: 40px;
+      text-align: center;
+      color: #777;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="banner-text">
+갑자기 부자가 될 수는 있어도,
+갑자기 안목을 얻을 순 없다.
+    </div>
+  </header>
+
+  <section class="section">
+    <h2>안목을 위한 선택의 장</h2>
+    <p>
+      무엇을 사야 할지, 무엇을 봐야 할지, 무엇을 찾아야 할지, 무엇을 가져야 할지 고민하는 당신에게.
+      관심 있는 테마 피드를 선택하고, 취향 있는 사람들의 큐레이션을 만나보세요.
+      패션 · 굿즈 · 화장품 · 맛집 등 다양한 카테고리에서 안목을 넓히고 실제 미팅도 가능합니다.
+    </p>
+
+    <div class="cards">
+      <div class="card">
+        <h3>패션 & 굿즈</h3>
+        <p>취향 있는 사람들이 직접 올린 아이템을 보고 영감을 얻으세요.</p>
+      </div>
+
+      <div class="card">
+        <h3>라이프스타일</h3>
+        <p>맛집, 공간, 경험을 공유하는 피드로 안목을 확장하세요.</p>
+      </div>
+
+      <div class="card">
+        <h3>인사이트 미팅</h3>
+        <p>관심사가 맞는 사람과 실제로 만나 대화를 나누세요.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    © 2025 갑서 (갑자기 부자가 된 당신을 위한 서비스)
+  </footer>
+</body>
+</html>
